--- a/bootstrap.Rmd
+++ b/bootstrap.Rmd
@@ -25,21 +25,24 @@ library(grid)
 
 The idea of the Bootstrap is rather strange: say we have some data from some distribution and we want to use it to estimate some parameter $\theta$. We have a formula (a *statistic*) $T(x_1, .. , x_n)$. What is the standard error in this estimate? That is, what is $sd[T(X_1, .. , X_n)]$?
 
-Sometimes we can do this mathematically: Let's assume that the $X_i$ are *iid* (independent and identically distributed)
+Sometimes we can do this mathematically: Let's assume that the $X_i$ are *iid* (independent and identically distributed) and we are interested in the mean. Let's write ${\bf X}=(X_1, .. , X_n)$, then
 
 $$
 \begin{aligned}
 &\theta    = E[X]\\
-&T(x_1, .. , x_n)    = \frac1{n} \sum_{i=1}^n x_i\\
-&Var[T(X_1, .. , X_n)]  = E \left[ \left( T(X_1, .. , X_n) - E[T(X_1, .. , X_n)] \right)^2  \right]\\
-&E[T(X_1, .. , X_n)] = E[\frac1{n} \sum_{i=1}^n X_i] = \frac1{n} \sum_{i=1}^n E[X_i] = \frac1{n} n \theta = \theta \\
-&Var[T(X_1, .. , X_n)]  = E \left[ \left( \frac1{n}\sum_{i=1}^n X_i - \theta \right)^2  \right] = \\
-&E \left[ \left( \frac1{n}\sum_{i=1}^n (X_i - \theta ) \right)^2  \right] \\
-
+&T{\bf X}    = \frac1{n} \sum_{i=1}^n x_i\\
+&E[T{\bf X}] = E[\frac1{n} \sum_{i=1}^n X_i] = \frac1{n} \sum_{i=1}^n E[X_i] = \frac1{n} n \theta = \theta \\
+&Var[T{\bf X})]  = E \left[ \left( \frac1{n}\sum_{i=1}^n X_i - \theta \right)^2  \right] = \\
+&\frac1{n^2} E \left[ \left( \sum_{i=1}^n X_i - n\theta \right)^2  \right] = \\
+&\frac1{n^2} E \left[  \left(  \sum_{i=1}^n (X_i - \theta) \right)^2  \right] = \\
+&\frac1{n^2} E \left[ \sum_{i,j=1}^n \left(  X_i - \theta \right)\left(  X_j - \theta \right)  \right] = \\
 &\frac1{n^2} \left[ \sum_{i=1}^n E(X_i - \theta )^2 + \sum_{i,j=1,i \ne j}^n E(X_i - \theta )(X_j - \theta )  \right] =\\
 &\frac1{n^2} \left[ n E(X_1 - \theta )^2 + 0  \right] = \frac1{n}Var[X_1]\\
 \end{aligned}
 $$
+
+because $E(X_i - \theta )^2 =E(X_1 - \theta )^2$ (identically distributed) and $E(X_i - \theta )(X_j - \theta )=E(X_i - \theta )E(X_j - \theta )=0$ because of independence.
+
 But let's say that instead of the mean we want to estimate $\theta$ with the median. Now what is the $sd[\text{median}(x_1,..,x_n)]$? This can still be done analytically, but is already much more complicated. 
 
 It would of course be easy if we could simulate from the distribution:
@@ -71,6 +74,8 @@ plot(ecdf(x))
 curve(pnorm(x), -3, 3, add = TRUE)
 ```
  
+There is a famous theorem in probability theory (Glivenko-Cantelli) that says that the empirical distribution function converges to the true distribution function uniformly. 
+ 
 How does one simulate from $\hat F$? It means to *resample* from the data, that is randomly select numbers from x *with replacement* such that each observation has an equal chance of getting picked:
 
 ```{r}
@@ -81,17 +86,17 @@ sort(sample(x, size=10, replace=T))
 sort(sample(x, size=10, replace=T))
 ```
 
-Now the Boostrap estimate of standard error is simply the sample standard deviation of the estimates of B such bootstrap samples:
+Now the Bootstrap estimate of standard error is simply the sample standard deviation of the estimates of B such bootstrap samples:
 
 ```{r}
-x <- rnorm(100, 10, 3)
+x <- rnorm(25, 0, 1)
 B <- 500
 z <- matrix(0, B, 2)
 for(i in 1:B) {
-  z[i, 1]<- mean(sample(x, size=100, replace=T))
-  z[i, 2]<- median(sample(x, size=100, replace=T))
+  z[i, 1]<- mean(sample(x, size=25, replace=T))
+  z[i, 2]<- median(sample(x, size=25, replace=T))
 }
-round(c(3/sqrt(100), apply(z, 2, sd)), 3)
+round(c(1/sqrt(25), apply(z, 2, sd)), 3)
 ```
 
 There is also a package that we can use:
@@ -156,18 +161,22 @@ thetastar.gamma <- bootstrap(x.gamma, 2000, T.fun)$thetastar
 df <- data.frame(x = thetastar.gamma)
 bw <- diff(range(x))/50
 ggplot(df, aes(x)) +
-  geom_histogram(color = "black", fill = "white", binwidth = bw) + 
+  geom_histogram(color = "black", 
+                 fill = "white", 
+                 binwidth = bw) + 
   labs(x="x", y="Counts")
 ```
 
-Not that I increased the number of Bootstrap samples to 2000, which is standard when calculating confidence intervals.
+Note that I increased the number of Bootstrap samples to 2000, which is standard when calculating confidence intervals.
 
-We can see that the bootstrap samples are reasonably normally distributed, so we can find the confidence intervals with
+We can see that the bootstrap estimates are reasonably normally distributed, so we can find the confidence interval with
 
 ```{r}
 T.fun(x.normal) + c(-1, 1)*qnorm(0.975)*sd(thetastar.normal)
 T.fun(x.gamma) + c(-1, 1)*qnorm(0.975)*sd(thetastar.gamma)
 ```
+
+Notice that here there is no $/\sqrt{n}$, because sd(thetastar) is already the standard deviation of the estimator, not of an individual observation.
 
 ###Percentile Intervals
 
@@ -191,9 +200,9 @@ $$
 here
 
 -  $\Phi$ is the standard normal cdf  
--  $\alpha$ is from the desired confidence level  
--  $\widehat {z_0}$ is a bias-correctio factor  
--  $\hat a$ is called acceleration.
+-  $\alpha$ is the desired confidence level  
+-  $\widehat {z_0}$ is a bias-correction factor  
+-  $\hat a$ is called the acceleration
 
 ```{r}
 bcanon(x.normal, 2000, T.fun, alpha=c(0.025, 0.975))$conf
