--- a/classification.Rmd
+++ b/classification.Rmd
@@ -386,6 +386,58 @@ fit <- nnet(x = cbind(dta$x, dta$y),
 do.graph2(dta, fit)
 ```
 
+###Tree based methods
+
+Yet another idea is as follows. Let's define a "distance" between the groups. Now let's take one variable (say x) and for some number a split the data set into two parts $x\lt a$ and $x\gt a$. For each a we get a distance in the two splits. Find a such that this distance is maximized. Do the same for all the variables. Use the best overall split. 
+
+Next we repeat the same procedure within ich of the splits defined before. In this way we get smaller and smaller data sets which are more and more homogeneous (aka have the same group).
+
+If we kept on going eventually each observation would be its own split, but instead we will stop at some point before. 
+
+There are a number of methods for tree based classification. Here we will use the library *rpart*, which implements recursive partitioning.
+
+Let's start with an example
+
+```{r}
+library(rpart)
+x <- rep(c(0.05, 0.15, 0.05, 0.15, 0.45, 0.45), 10)
+y <- rep(c(0.25, 0.25, 0.75, 0.75, 0.85, 0.95), 10)
+z <- rep(c(0, 1, 2, 2, 3, 4), 10)
+fit <- rpart(z ~ x + y)
+plot(fit)
+text(fit)
+```
+
+so the first split is for $x\lt 0.3$. For those observations with $x\lt 0.3$ the next split is for $y\lt 0.5$ etc.
+
+Here is what this looks like for our examples:
+
+```{r}
+dta <- example.data.1()
+fit <- rpart(z2 ~ x + y, data=dta)
+plot(fit)
+text(fit)
+do.graph2(dta, fit)
+```
+
+```{r}
+dta <- example.data.2()
+fit <- rpart(z2 ~ x + y, data=dta)
+plot(fit)
+text(fit)
+do.graph2(dta, fit)
+```
+
+```{r}
+dta <- example.data.3()
+fit <- rpart(z2 ~ x + y, data=dta)
+plot(fit)
+text(fit)
+do.graph2(dta, fit)
+```
+
+Tree based methods using advanced methods such as bagging, boosting, random forrests etc. can be very effective, they are however often difficult to interpret.
+
 ##Misclassification Rate
 
 How can we choose among all of those methods? The most common measure of how good a classifier is is the *misclassification rate*, that is how many observations would have been classified wrong. Let's find this rate for the various methods:
@@ -449,6 +501,86 @@ msc <- (tbl[1, 2]+tbl[2, 1])/sum(tbl)
 msc
 ```
 
+-  trees
+
+```{r}
+fit <- rpart(z2 ~ x + y, data=dta)
+zhat <- predict(fit)
+zhat <- ifelse(zhat<0.5, "Blue", "Red")
+tbl <- table(dta$z1, zhat)
+msc <- (tbl[1, 2]+tbl[2, 1])/sum(tbl)
+msc
+```
+
+
 So 1-nearest neighbor wins, with misc=0!
 
 Or does it? The problem is that we evaluated the methods on the same data set that we used for fitting (or "training"). In the case of 1-nearest neighbor that means we never get this wrong. But if we then applied the fit to a new data set we likely would do much worse. This is true to a lesser extent for all the methods, and in real life we should always use different data sets for training and for evaluation. If only one data set is available we can again use the idea of cross-validation.
+
+##Fisher's iris data
+
+Let's apply all of these methods to Fisher's iris data
+
+-  LDA
+
+```{r}
+species.code <- rep(0, 150)
+species.code[51:100] <- 1
+species.code[101:150] <- 2
+iris1 <- iris
+iris1$Species <- species.code
+fit <- lm(Species~., data=iris1)
+tmp <- predict(fit)
+zhat <- ifelse(tmp<2/3, 0, 1)
+zhat[tmp>4/3] <- 2
+tbl <- table(species.code, zhat)
+(150-sum(diag(tbl)))/150
+```
+
+-  Loess
+
+```{r}
+fit <- loess(Species~., data=iris1)
+tmp <- predict(fit)
+zhat <- ifelse(tmp<2/3, 0, 1)
+zhat[tmp>4/3] <- 2
+tbl <- table(species.code, zhat)
+(150-sum(diag(tbl)))/150
+```
+
+- 5-nearest neighbor
+
+```{r}
+zhat <- knn(iris[, 1:4], 
+            iris[, 1:4], 
+            cl = iris$Species, k=5)
+tbl <- table(iris$Species, zhat)
+(150-sum(diag(tbl)))/150
+```
+
+- neural net
+
+
+```{r}
+targets <- class.ind( c(rep(0, 50), rep(1, 50), rep(2, 50)) )
+fit <- nnet(x = iris1[, 1:4], 
+            y = targets, 
+            size = 2)
+tmp <- round(predict(fit))
+zhat <- ifelse(tmp[, 1]==1, 0, 1)
+zhat[tmp[, 3]==1] <- 2
+tbl <- table(species.code, zhat)
+(150-sum(diag(tbl)))/150
+```
+
+-  trees
+
+```{r}
+fit <- rpart(Species ~ ., data=iris1)
+tmp <- predict(fit)
+zhat <- ifelse(tmp<2/3, 0, 1)
+zhat[tmp>4/3] <- 2
+tbl <- table(species.code, zhat)
+(150-sum(diag(tbl)))/150
+```
+
