--- a/syl.Rmd
+++ b/syl.Rmd
@@ -39,7 +39,7 @@ Tuesday, Thursday 3:15-5:15pm OF407 (by appointment)
 Wednesday  1:30-3:00pm via email   
 email: wolfgang[dot]rolke[at]upr[dot]edu   
 
-when you send me an email `r hl()$fontcolor("ALWAYS")` start the subject line with ESMA6xxx
+when you send me an email `r hl()$fontcolor("ALWAYS")` start the subject line with ESMA6835
 
 ###Grading:
 
@@ -47,6 +47,8 @@ when you send me an email `r hl()$fontcolor("ALWAYS")` start the subject line wi
 2.  Midterm 25%  
 3.  Final 25%  
 
-###Homework
+###Submit your work
 
-all homeworks have to be done using RMarkdown and have to be submitted via Dropbox.
+all homeworks and exams have to be done using RMarkdown and have to be submitted via Dropbox. You will be sent an invitation to join Dropbox soon (if you are not already a user). A little while later you will receive an email with an invitation to share a Dropbox folder with me. 
+
+From then on anytime you put something in this folder I will immediately have it in mine as well. So when you are ready to submit your homework simply drop the file into the folder.
